# testcontainer-demo

./: README.md  pyproject.toml
.github/workflows/: cicd.yaml
src/testcontainer_demo/: app.py
tests/: test_app.py
